--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
       "html"
     ],
     "collectCoverageFrom": [
-      "src/model/**/*.ts",
-      "src/repositories/**/*.ts"
+      "src/data/**/*.ts",
+      "!src/data/**/Mock*.ts",
+      "src/domain/**/*.ts",
+      "!src/domain/**/Mock*.ts"
     ],
     "coverageDirectory": "<rootDir>/coverage",
     "testEnvironment": "node"
